try moving file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </style>
 </head>
 <body>
-    <script src="./src/js/scripts.js" type="module"></script>
+    <script src="./scripts.js" type="module"></script>
 </body>
 </html>
